<resources>
    <string name="app_name">My Books</string>

    <string name="already_read" >Already Read Books</string>
    <string name="want_to_read" >Books Want To Read</string>
    <string name="favorite" >Favorite Books</string>
    <string name="currently_reading">Currently Reading Books</string>
    <string name="home_page">Home Page</string>
    <string name="email" >Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="name">Name</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have An Account ?</string>
    <string name="book_name">Book Name :</string>
    <string name="author">Author :</string>
    <string name="short_description">Short Description :</string>
    <string name="emailhere">Enter Your Email Here</string>
    <string name="passwordhere">Enter Your Password Here</string>
    <string name="namehere">Enter Your Name Here</string>
    <string name="confirmpasswordhere">Rewrite Your Password Here</string>
    <string name="bookadded">Book Added</string>
    <string name="somethingworng">\"Something wrong happened try again ! \"</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="aboutdeveloper">Developed by huthifa almnasrah \ncomputer science student in albalqa applied university\n</string>
    <string name="dissmiss">Dissmiss</string>
    <string name="pages">Pages :</string>
    <string name="description">Description :</string>
    <string name="resetpassword">Check Your Email To Reset Your Password...</string>
    <string name="nobooksadded">there no books added here \nadd books in your list</string>
    <string name="yes">Yes</string>
    <string name="areyousure">"Are You Sure to delete ? "</string>
    <string name="deleted">\" Deleted\"</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="books">add books</string>
</resources>