<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowBookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCurrently"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/currently_reading"
                android:textAllCaps="false"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnWant"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/want_to_read"
                android:textAllCaps="false"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/btnCurrently" />

            <Button
                android:id="@+id/btnAlready"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/already_read"
                android:textAllCaps="false"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/btnWant" />

            <Button
                android:id="@+id/btnFavorite"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/favorite"
                android:textAllCaps="false"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/btnAlready" />

            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/book_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="Book 1"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/txtAuthorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="huthifa"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/txtpages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="500"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/author"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/pages"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/description"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/txtDescrioption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:padding="@dimen/_5sdp"
                android:text="Long Description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="205dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="317dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="120dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>