<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/_15sdp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim"
                android:layout_width="@dimen/_300sdp"
                android:layout_height="@dimen/_300sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/profile" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:fontFamily="@font/aldrich"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/book"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/already_have_an_account"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/aldrich"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/register"
                app:layout_constraintTop_toBottomOf="@+id/register" />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:fontFamily="@font/aldrich"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/register"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirmpassword"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/name"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/image"
                app:layout_constraintStart_toStartOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@id/image">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>