<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_margin="@dimen/_10sdp"
    app:cardElevation="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardBackgroundColor="@color/primary_variant"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgBook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/book" />

            <ImageView
                android:id="@+id/btnArrowDown"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/imgBook"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/backgroung_arrow"
                android:src="@drawable/arrow_down"
                app:tint="@color/black" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/bookName"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imgBook"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/book_name"
                android:textDirection="locale"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/expandedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstLayout"
            android:padding="@dimen/_10sdp"
            android:visibility="visible">

            <ImageView
                app:tint="@color/black"
                android:id="@+id/btnUpArrow"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/txtShortDesc"
                android:background="@drawable/backgroung_arrow"
                android:src="@drawable/arrow_up" />

            <ImageView
                android:id="@+id/btnDelete"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_below="@id/txtShortDesc"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_toStartOf="@+id/btnUpArrow"
                android:background="@drawable/background_delete"
                android:src="@drawable/delete"
                android:visibility="gone"
                app:tint="@color/design_default_color_error" />

            <TextView
                android:id="@+id/txtAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/authorTxt"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="huthifa"
                android:textDirection="locale" />

            <TextView
                android:id="@+id/shortTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtAuthor"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/short_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtShortDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shortTxt"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="hi hi hi hi hi hi hi "
                android:textDirection="locale" />

            <TextView
                android:id="@+id/authorTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_gruesa_libre"
                android:text="@string/author"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>